--- a/user-style.css
+++ b/user-style.css
@@ -1,5 +1,5 @@
 @-moz-document domain("quora.com") {
-	html,body,h1,h2,h3,h4,h5,h6,.box_feed,.box_feed div,p,.link.selected,blockquote {
+	html,body,h1,h2,h3,h4,h5,h6,.box_feed,.box_feed div,p,.link.selected,.side_bar,.NonMemberSiteHeader,.LoggedOutSiteHeader,.SiteHeader {
 		background:#404040 !important;
 		color:#D4C4A9 !important;
 	}
